--- a/.gitignore
+++ b/.gitignore
@@ -12124,3 +12124,29 @@ crashlytics-build.properties
 *.log
 *.log
 *.cm
+2D GAME/Library/Artifacts/11/11e1925c098d6e5d020d9e34bd206828
+2D GAME/Library/Artifacts/1c/1c4fe6057293c4ab1fee2786fe4d4059
+2D GAME/Library/Artifacts/20/20875068539b2b1d326bcf07a55a3430
+2D GAME/Library/Artifacts/2f/2f0d31dde1a6a4f00b557f9624a073b8
+2D GAME/Library/Artifacts/3c/3c830b9841b903e57b51e78e331f695c
+2D GAME/Library/Artifacts/40/4055932a79e2de2f054588e6cbb89c97
+2D GAME/Library/Artifacts/53/538fe37e5c928baaafb6b112952c75f8
+2D GAME/Library/Artifacts/55/552b5b833470dcac1092d2da928436ac
+2D GAME/Library/Artifacts/5a/5ab22a6929c92919a32618adadd25d21
+2D GAME/Library/Artifacts/5d/5de4073a34d5b826941166bd8ae9e47a
+2D GAME/Library/Artifacts/5f/5fa64e2895f75b2399a96d46218692e0
+2D GAME/Library/Artifacts/65/6593b86a3deab394a98cd8b64eb3b77f
+2D GAME/Library/Artifacts/6d/6d03df5fed74f66f4387c0d7d1eae192
+2D GAME/Library/Artifacts/76/7609bf3f5b57b337ed17e9e557bc8a4c
+2D GAME/Library/Artifacts/77/77818bb2022cd9aa271535c9177c43ae
+2D GAME/Library/Artifacts/8e/8e7c571ada9824aee9691ad076d73e8c
+2D GAME/Library/Artifacts/a4/a434ebee15890fcd460b9c2c11b6c8cd
+2D GAME/Library/Artifacts/a8/a894e094a46da4e42c63b715ade33de5
+2D GAME/Library/Artifacts/a8/a8fe0890d7cccc46c3817c4d72e7e965
+2D GAME/Library/Artifacts/c1/c119e848de345a9c09414b47ba637f8a
+2D GAME/Library/Artifacts/d0/d037c371a9a79d099e82350a39118e2b
+2D GAME/Library/Artifacts/d1/d167baff5b9a028dfa52d336787bcb9d
+2D GAME/Library/Artifacts/d3/d3886aea50baa2b7f704677e84015471
+2D GAME/Library/Artifacts/d5/d5cf6b135cf084fe2f21ca17a5e009c3
+2D GAME/Library/Artifacts/dc/dc0e3228234dea038fcfc5abf6a121eb
+2D GAME/Library/Artifacts/f9/f954dfd4ef50cb4818ad34ee7aa903a0
