--- a/.gitignore
+++ b/.gitignore
@@ -13010,3 +13010,7 @@ crashlytics-build.properties
 2D GAME/Library/Artifacts/f9/f954dfd4ef50cb4818ad34ee7aa903a0
 2D GAME/Logs/shadercompiler-UnityShaderCompiler.exe-8.log
 2D GAME/Logs/shadercompiler-UnityShaderCompiler.exe-9.log
+2D GAME/Library/Artifacts/80/800c52211a783e7e004dc58ba29e9b89
+2D GAME/Library/Artifacts/78/78d51cdff6eabace01bcb92786df5cd8
+2D GAME/Library/Artifacts/78/7832e6826439cb9f6673b14f0c8eae39
+/2D GAME/Temp
