--- a/.gitignore
+++ b/.gitignore
@@ -13014,3 +13014,28 @@ crashlytics-build.properties
 2D GAME/Library/Artifacts/78/78d51cdff6eabace01bcb92786df5cd8
 2D GAME/Library/Artifacts/78/7832e6826439cb9f6673b14f0c8eae39
 /2D GAME/Temp
+2D GAME/Library/Artifacts/8b/8becdbea631b50c425359750e99dbf0e
+2D GAME/Library/Artifacts/98/9870b107e600993ec904db0ce8190337
+2D GAME/Library/Artifacts/a6/a6fdf67293c44e1bf310515c2bedbcd1
+2D GAME/Library/Artifacts/aa/aa65eccd3f8a46c27975c21fa15d8711
+2D GAME/Library/Artifacts/b5/b5b8063912d42f9731e3c17ac0b33e29
+2D GAME/Library/Artifacts/b8/b8521d3636494e402fb58b59438b6b5d
+2D GAME/Library/Artifacts/b9/b96fc4f40c27a08ddefe9144c4dbe4a5
+2D GAME/Library/Artifacts/c8/c87f884fe135bb7e330aae61df1d150e
+2D GAME/Library/Artifacts/c9/c9818b74a7320c9e302149d849bb0914
+2D GAME/Library/Artifacts/cb/cb3791052e7b252ae09a5c2dd1873884
+2D GAME/Library/Artifacts/d7/d78a9eab3ce98bfc30fb4b6058cda460
+2D GAME/Library/Artifacts/da/da5a179fb3b348407d1b6157e0b7c0b7
+2D GAME/Library/Artifacts/e7/e7335cc8c2b52d822267efeea4842c40
+2D GAME/Library/Artifacts/e8/e8e1b7f0a6138345b8c5db3bc22ef6d3
+2D GAME/Library/Artifacts/e9/e9e3dd52b8477b354005cc15b7f2225a
+2D GAME/Library/Artifacts/ee/ee089cd82f360ac10d9bfa08c7b541cf
+2D GAME/Library/Artifacts/f2/f29e4d0b80b3f3466f2dd8cf530a1691
+2D GAME/Library/Artifacts/fa/faba8b097343a226f73030c312ab5d50
+2D GAME/Library/Artifacts/fe/fe9829465ccf81cfbe5895f282742af8
+2D GAME/Library/Artifacts/ff/fff0fa59a14a25bb2d1dc5229be8c4a7
+2D GAME/Library/GridBrush/Last/0.asset
+2D GAME/Library/GridBrush/Last/1.asset
+2D GAME/Library/GridBrush/Last/2.asset
+2D GAME/Library/GridBrush/Last/3.asset
+2D GAME/Library/GridBrush/Last/4.asset
