--- a/2D GAME/Packages/manifest.json
+++ b/2D GAME/Packages/manifest.json
@@ -7,6 +7,7 @@
     "com.unity.feature.2d": "2.0.0",
     "com.unity.postprocessing": "3.4.0",
     "com.unity.render-pipelines.universal": "16.0.5",
+    "com.unity.timeline": "1.8.6",
     "com.unity.modules.accessibility": "1.0.0",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
